# autocone

./: .gitignore  README.md
autocone/: CMakeLists.txt  package.xml
autocone_datalogger/: CMakeLists.txt  package.xml
autocone_description/: CMakeLists.txt  dimensions.txt  package.xml  urdf.rviz
autocone_description/launch/: rviz_colin.launch  rviz_colin_2.launch
autocone_description/scripts/: create_cone_world.py
autocone_description/urdf/: colin.urdf.xacro  colin_2.urdf.xacro  colin_robocar_race.urdf.xacro  cone_world.world  em_3905.urdf.xacro  my_box.urdf  robocar_track.world
autocone_description/urdf/models/autcup_city_tiles/: model.config  model.sdf
autocone_description/urdf/models/autcup_city_white_mark/: autcup_city_white_mark.dae  model.config  model.sdf
autocone_description/urdf/models/autcup_race_black_mark/: autcup_race_black_mark.dae  model.config  model.sdf
autocone_description/urdf/models/autcup_race_white_mark/: autcup_race_white_mark.dae  model.config  model.sdf
autocone_description/urdf/models/camera_homography_shape/: camera_homography_shape.dae  model.config  model.sdf
autocone_description/urdf/models/mini_cone/: model.config  model.sdf
autocone_description/urdf/models/robocar_race/: model.config  model.sdf  robocar.dae
autocone_description/urdf/models/small_dot/: model.config  model.sdf  small_dot.dae
autocone_description/urdf/worlds/: autcup_city_white_mark.world  autcup_race_black_mark.world  autcup_race_white_mark.world  camera_homography_scene.world  robocar_track.world  track_test.world
autocone_gazebo/: CMakeLists.txt  (+2 more)
(+107 files in other folders)
