<?xml version="1.0"?>
<package format="2">
  <name>autocone_description</name>
  <version>0.0.0</version>
  <description>The autocone_description package</description>

  <maintainer email="daninesvera@gmail.com">Daniel Nesvera</maintainer>

  <license>MIT</license>

  <author email="daninesvera@gmail.com">Daniel Nesvera</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/.."
                gazebo_plugin_path="${prefix}/lib"/>
  </export>

</package>
